# tl-scraper

./: .gitignore  Cargo.toml  client-creds.sample.json  config.sandbox.toml.example  rust-toolchain.toml
.circleci/: config.yml
.github/: dependabot.yml
gocardless/: Cargo.toml  sandbox-config.toml.example
gocardless/src/: accounts.rs  auth.rs  boop.rs  client.rs  config.rs  connect.rs  http_tools.rs  institutions.rs  lib.rs  main.rs  sync.rs  transactions.rs
src/: authentication.rs  client.rs  config.rs  join_pool.rs  lib.rs  main.rs  sync.rs
src/auth/: mod.rs  start.rs
src/client/: authentication.rs  driver.rs  mod.rs
truelayer/: Cargo.toml
truelayer/src/: config.rs  join_pool.rs  sync.rs
truelayer/src/auth/: start.rs
truelayer/src/client/: driver.rs
truelayer/templates/: auth_start.html
