[package]
name = "tl-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features=["full"] }
reqwest = { version = "0.12.2", features = ["json"] }
anyhow = { version = "1.0.81", features = ["backtrace"] }
tracing = "0.1.40"
tracing-subscriber = { version= "0.3.18", features = ["fmt","env-filter", "local-time"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["serde_derive"] }
chrono =  { version = "0.4.37", features = ["serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
hyper = "1.2.0"
tracing-log = "0.2.0"
serde_urlencoded = "0.7.1"
tempfile = "3.10.1"
urlencoding = "2.1.3"
rust_decimal = "1.35.0"
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
axum = { version = "0.7.4", features = ["macros"] }
tokio-util = "0.7.10"
url = "2.5.0"
askama = { version = "0.12.1" }
toml = "0.8.12"
