[package]
name = "tl-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.1", features=["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
tracing = "0.1.41"
tracing-subscriber = { version= "0.3.18", features = ["fmt","env-filter", "local-time"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["serde_derive"] }
chrono =  { version = "0.4.38", features = ["serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
hyper = "1.5.1"
tracing-log = "0.2.0"
serde_urlencoded = "0.7.1"
tempfile = "3.10.1"
urlencoding = "2.1.3"
rust_decimal = "1.36.0"
futures = "0.3.31"
clap = { version = "4.5.21", features = ["derive"] }
axum = { version = "0.7.9", features = ["macros"] }
tokio-util = "0.7.12"
url = "2.5.4"
askama = { version = "0.12.1" }
toml = "0.8.19"
again = "0.1.2"
