[package]
name = "tl-scraper"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1.2"
anyhow = { version = "1.0.95", features = ["backtrace"] }
askama = { version = "0.12.1" }
axum = { version = "0.7.9", features = ["macros"] }
chrono =  { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
hyper = "1.5.2"
reqwest = { version = "0.12.4", features = ["json"] }
rust_decimal = "1.36.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.134"
serde_urlencoded = "0.7.1"
tempfile = "3.10.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
toml = "0.8.19"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt","env-filter", "local-time"] }
url = "2.5.4"
urlencoding = "2.1.3"
